release: v0.2 — fat JARs, packaging scripts, WSS auto-detection, SOLID MCP refactoring
- Fat JARs unificados (server.jar/client.jar/mcp-bridge.jar) via maven-shade-plugin
- JavaFX excluido del shade plugin (compatible con Liberica JDK Full)
- package-native.py / package-native.bat → instaladores .deb/.exe con jpackage
- WSS automático: ClientConfig.getServerUrl() detecta puerto 443/8443 → wss://
- Flag --ssl para forzar WSS manualmente
- run-server.sh, run-client.sh, run-client.bat (launcher scripts con module-path)
- SOLID MCP refactoring: ClientMcpServer 1013→11 archivos
- ClientConfig.setServerPort() ahora activa SSL automático en 443/8443
- README.md: sección nativa packaging, changelog v0.2, versiones JAR actualizadas
- tools/README.md: instrucciones empaquetado